[gd_scene load_steps=10 format=4 uid="uid://wm7vwqrlsq56"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_xoix0"]
[ext_resource type="TileSet" uid="uid://c4ajugvgndiqg" path="res://tilesets/game_tileset.tres" id="2_smy2q"]
[ext_resource type="PackedScene" uid="uid://p7ybampb1tfy" path="res://scenes/objects/up_conveyer.tscn" id="3_wlpa2"]
[ext_resource type="PackedScene" uid="uid://cwg25j64nh2a1" path="res://scenes/objects/down_conveyer.tscn" id="4_rtj1r"]
[ext_resource type="FontFile" uid="uid://c5rf6prrbtmlf" path="res://assets/LazyFox Pixel Font 2/LazyFox Pixel Font 2.ttf" id="5_6h1mp"]
[ext_resource type="Theme" uid="uid://bb6vwl0h1flws" path="res://assets/FlatUI4/kenneyUI-blue.tres" id="6_cnmoc"]
[ext_resource type="PackedScene" uid="uid://de5s82wmpaqjr" path="res://scenes/ui/level_selection_window.tscn" id="7_4xdqb"]
[ext_resource type="PackedScene" uid="uid://dtvy6pkhg6a1" path="res://scenes/ui/warning_window.tscn" id="7_n2oy8"]
[ext_resource type="PackedScene" uid="uid://d1bjeeabfdpcp" path="res://scenes/ui/language_selection_window.tscn" id="10_2h6m6"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_xoix0")

[node name="GameTileMap" type="Node2D" parent="."]

[node name="Ground" type="TileMapLayer" parent="GameTileMap"]
tile_map_data = PackedByteArray("AAD/////AQAiAAEAAAD//wAAAQAiAAEAAAD//wEAAQAiAAEAAAD//wIAAQAiAAEAAAD//wMAAQAiAAEAAAD//wQAAQAiAAEAAAD//wUAAQAiAAEAAAD//wYAAQAiAAEAAAD//wcAAQAiAAEAAAD//wgAAQAiAAEAAAD//wkAAQAiAAEAAAD//woAAQAiAAEAAAD//wsAAQAiAAEAAAD//wwAAQAiAAEAAAD//w0AAQAiAAEAAAD//w4AAQAiAAEAAAD//w8AAQAiAAEAAAAAAP//AQAiAAEAAAAAAAAAAQAiAAEAAAAAAAEAAQAiAAEAAAAAAAIAAQAiAAEAAAAAAAMAAQAiAAEAAAAAAAQAAQAiAAEAAAAAAAUAAQAiAAEAAAAAAAYAAQAiAAEAAAAAAAcAAQAiAAEAAAAAAAgAAQAiAAEAAAAAAAkAAQAiAAEAAAAAAAoAAQAiAAEAAAAAAAsAAQAiAAEAAAAAAAwAAQAiAAEAAAAAAA0AAQAiAAEAAAAAAA4AAQAiAAEAAAAAAA8AAQAiAAEAAAABAP//AQAiAAEAAAABAAAAAQAiAAEAAAABAAEAAQAiAAEAAAABAAIAAQAiAAEAAAABAAMAAQAiAAEAAAABAAQAAQAiAAEAAAABAAUAAQAiAAEAAAABAAYAAQAiAAEAAAABAAcAAQAiAAEAAAABAAgAAQAiAAEAAAABAAkAAQAiAAEAAAABAAoAAQAiAAEAAAABAAsAAQAiAAEAAAABAAwAAQAiAAEAAAABAA0AAQAiAAEAAAABAA4AAQAiAAEAAAABAA8AAQAiAAEAAAACAP//AQAiAAEAAAACAAAAAQAiAAEAAAACAAEAAQAiAAEAAAACAAIAAQAiAAEAAAACAAMAAQAiAAEAAAACAAQAAQAiAAEAAAACAAUAAQAiAAEAAAACAAYAAQAiAAEAAAACAAcAAQAiAAEAAAACAAgAAQAiAAEAAAACAAkAAQAiAAEAAAACAAoAAQAiAAEAAAACAAsAAQAiAAEAAAACAAwAAQAiAAEAAAACAA0AAQAiAAEAAAACAA4AAQAiAAEAAAACAA8AAQAiAAEAAAADAP//AQAiAAEAAAADAAAAAQAiAAEAAAADAAEAAQAiAAEAAAADAAIAAQAiAAEAAAADAAMAAQAiAAEAAAADAAQAAQAiAAEAAAADAAUAAgAAAA0AAAADAAYAAQAiAAEAAAADAAcAAQAiAAEAAAADAAgAAQAiAAEAAAADAAkAAQAiAAEAAAADAAoAAQAiAAEAAAADAAsAAQAiAAEAAAADAAwAAQAiAAEAAAADAA0AAQAiAAEAAAADAA4AAQAiAAEAAAADAA8AAQAiAAEAAAAEAP//AQAiAAEAAAAEAAAAAQAiAAEAAAAEAAEAAQAiAAEAAAAEAAIAAQAiAAEAAAAEAAMAAQAiAAEAAAAEAAQAAQAiAAEAAAAEAAUAAgAAAA0AAAAEAAYAAQAiAAEAAAAEAAcAAQAiAAEAAAAEAAgAAQAiAAEAAAAEAAkAAQAiAAEAAAAEAAoAAQAiAAEAAAAEAAsAAQAiAAEAAAAEAAwAAQAiAAEAAAAEAA0AAQAiAAEAAAAEAA4AAQAiAAEAAAAEAA8AAQAiAAEAAAAFAP//AQAiAAEAAAAFAAAAAQAiAAEAAAAFAAEAAQAiAAEAAAAFAAIAAQAiAAEAAAAFAAMAAQAiAAEAAAAFAAQAAQAiAAEAAAAFAAUAAQAiAAEAAAAFAAYAAQAiAAEAAAAFAAcAAQAiAAEAAAAFAAgAAQAiAAEAAAAFAAkAAQAiAAEAAAAFAAoAAQAiAAEAAAAFAAsAAQAiAAEAAAAFAAwAAQAiAAEAAAAFAA0AAQAiAAEAAAAFAA4AAQAiAAEAAAAFAA8AAQAiAAEAAAAGAP//AQAiAAEAAAAGAAAAAQAiAAEAAAAGAAEAAQAiAAEAAAAGAAIAAQAiAAEAAAAGAAMAAQAiAAEAAAAGAAQAAQAiAAEAAAAGAAUAAQAiAAEAAAAGAAYAAQAiAAEAAAAGAAcAAQAiAAEAAAAGAAgAAQAiAAEAAAAGAAkAAQAiAAEAAAAGAAoAAQAiAAEAAAAGAAsAAQAiAAEAAAAGAAwAAQAiAAEAAAAGAA0AAQAiAAEAAAAGAA4AAQAiAAEAAAAGAA8AAQAiAAEAAAAHAP//AQAiAAEAAAAHAAAAAQAiAAEAAAAHAAEAAQAiAAEAAAAHAAIAAQAiAAEAAAAHAAMAAQAiAAEAAAAHAAQAAQAiAAEAAAAHAAUAAQAiAAEAAAAHAAYAAQAiAAEAAAAHAAcAAQAiAAEAAAAHAAgAAQAiAAEAAAAHAAkAAQAiAAEAAAAHAAoAAQAiAAEAAAAHAAsAAQAiAAEAAAAHAAwAAQAiAAEAAAAHAA0AAQAiAAEAAAAHAA4AAQAiAAEAAAAHAA8AAQAiAAEAAAAIAP//AQAiAAEAAAAIAAAAAQAiAAEAAAAIAAEAAQAiAAEAAAAIAAIAAQAiAAEAAAAIAAMAAQAiAAEAAAAIAAQAAQAiAAEAAAAIAAUAAQAiAAEAAAAIAAYAAQAiAAEAAAAIAAcAAQAiAAEAAAAIAAgAAQAiAAEAAAAIAAkAAQAiAAEAAAAIAAoAAQAiAAEAAAAIAAsAAQAiAAEAAAAIAAwAAQAiAAEAAAAIAA0AAQAiAAEAAAAIAA4AAQAiAAEAAAAIAA8AAQAiAAEAAAAJAP//AQAiAAEAAAAJAAAAAQAiAAEAAAAJAAEAAQAiAAEAAAAJAAIAAQAiAAEAAAAJAAMAAQAiAAEAAAAJAAQAAQAiAAEAAAAJAAUAAQAiAAEAAAAJAAYAAQAiAAEAAAAJAAcAAQAiAAEAAAAJAAgAAQAiAAEAAAAJAAkAAQAiAAEAAAAJAAoAAQAiAAEAAAAJAAsAAQAiAAEAAAAJAAwAAQAiAAEAAAAJAA0AAQAiAAEAAAAJAA4AAQAiAAEAAAAJAA8AAQAiAAEAAAAKAP//AQAiAAEAAAAKAAAAAQAiAAEAAAAKAAEAAQAiAAEAAAAKAAIAAQAiAAEAAAAKAAMAAQAiAAEAAAAKAAQAAQAiAAEAAAAKAAUAAQAiAAEAAAAKAAYAAQAiAAEAAAAKAAcAAQAiAAEAAAAKAAgAAQAiAAEAAAAKAAkAAQAiAAEAAAAKAAoAAQAiAAEAAAAKAAsAAQAiAAEAAAAKAAwAAQAiAAEAAAAKAA0AAQAiAAEAAAAKAA4AAQAiAAEAAAAKAA8AAQAiAAEAAAALAP//AQAiAAEAAAALAAAAAQAiAAEAAAALAAEAAQAiAAEAAAALAAIAAQAiAAEAAAALAAMAAQAiAAEAAAALAAQAAQAiAAEAAAALAAUAAQAiAAEAAAALAAYAAQAiAAEAAAALAAcAAQAiAAEAAAALAAgAAQAiAAEAAAALAAkAAQAiAAEAAAALAAoAAQAiAAEAAAALAAsAAQAiAAEAAAALAAwAAQAiAAEAAAALAA0AAQAiAAEAAAALAA4AAQAiAAEAAAALAA8AAQAiAAEAAAAMAP//AQAiAAEAAAAMAAAAAQAiAAEAAAAMAAEAAQAiAAEAAAAMAAIAAQAiAAEAAAAMAAMAAQAiAAEAAAAMAAQAAQAiAAEAAAAMAAUAAQAiAAEAAAAMAAYAAQAiAAEAAAAMAAcAAQAiAAEAAAAMAAgAAQAiAAEAAAAMAAkAAQAiAAEAAAAMAAoAAQAiAAEAAAAMAAsAAQAiAAEAAAAMAAwAAQAiAAEAAAAMAA0AAQAiAAEAAAAMAA4AAQAiAAEAAAAMAA8AAQAiAAEAAAANAP//AQAiAAEAAAANAAAAAQAiAAEAAAANAAEAAQAiAAEAAAANAAIAAQAiAAEAAAANAAMAAQAiAAEAAAANAAQAAQAiAAEAAAANAAUAAQAiAAEAAAANAAYAAQAiAAEAAAANAAcAAQAiAAEAAAANAAgAAQAiAAEAAAANAAkAAQAiAAEAAAANAAoAAQAiAAEAAAANAAsAAQAiAAEAAAANAAwAAQAiAAEAAAANAA0AAQAiAAEAAAANAA4AAQAiAAEAAAANAA8AAQAiAAEAAAAOAP//AQAiAAEAAAAOAAAAAQAiAAEAAAAOAAEAAQAiAAEAAAAOAAIAAQAiAAEAAAAOAAMAAQAiAAEAAAAOAAQAAQAiAAEAAAAOAAUAAQAiAAEAAAAOAAYAAQAiAAEAAAAOAAcAAQAiAAEAAAAOAAgAAQAiAAEAAAAOAAkAAQAiAAEAAAAOAAoAAQAiAAEAAAAOAAsAAQAiAAEAAAAOAAwAAQAiAAEAAAAOAA0AAQAiAAEAAAAOAA4AAQAiAAEAAAAOAA8AAQAiAAEAAAAPAP//AQAiAAEAAAAPAAAAAQAiAAEAAAAPAAEAAQAiAAEAAAAPAAIAAQAiAAEAAAAPAAMAAQAiAAEAAAAPAAQAAQAiAAEAAAAPAAUAAQAiAAEAAAAPAAYAAQAiAAEAAAAPAAcAAQAiAAEAAAAPAAgAAQAiAAEAAAAPAAkAAQAiAAEAAAAPAAoAAQAiAAEAAAAPAAsAAQAiAAEAAAAPAAwAAQAiAAEAAAAPAA0AAQAiAAEAAAAPAA4AAQAiAAEAAAAPAA8AAQAiAAEAAAAQAP//AQAiAAEAAAAQAAAAAQAiAAEAAAAQAAEAAQAiAAEAAAAQAAIAAQAiAAEAAAAQAAMAAQAiAAEAAAAQAAQAAQAiAAEAAAAQAAYAAQAiAAEAAAAQAAcAAQAiAAEAAAAQAAgAAQAiAAEAAAAQAAkAAQAiAAEAAAAQAAoAAQAiAAEAAAAQAAsAAQAiAAEAAAAQAAwAAQAiAAEAAAAQAA0AAQAiAAEAAAAQAA4AAQAiAAEAAAAQAA8AAQAiAAEAAAARAP//AQAiAAEAAAARAAAAAQAiAAEAAAARAAEAAQAiAAEAAAARAAIAAQAiAAEAAAARAAMAAQAiAAEAAAARAAQAAQAiAAEAAAARAAYAAQAiAAEAAAARAAcAAQAiAAEAAAARAAgAAQAiAAEAAAARAAkAAQAiAAEAAAARAAoAAQAiAAEAAAARAAsAAQAiAAEAAAARAAwAAQAiAAEAAAARAA0AAQAiAAEAAAARAA4AAQAiAAEAAAARAA8AAQAiAAEAAAASAP//AQAiAAEAAAASAAAAAQAiAAEAAAASAAEAAQAiAAEAAAASAAIAAQAiAAEAAAASAAMAAQAiAAEAAAASAAQAAQAiAAEAAAASAAUAAQAiAAEAAAASAAYAAQAiAAEAAAASAAcAAQAiAAEAAAASAAgAAQAiAAEAAAASAAkAAQAiAAEAAAASAAoAAQAiAAEAAAASAAsAAQAiAAEAAAASAAwAAQAiAAEAAAASAA0AAQAiAAEAAAASAA4AAQAiAAEAAAASAA8AAQAiAAEAAAATAP//AQAiAAEAAAATAAAAAQAiAAEAAAATAAEAAQAiAAEAAAATAAIAAQAiAAEAAAATAAMAAQAiAAEAAAATAAQAAQAiAAEAAAATAAUAAQAiAAEAAAATAAYAAQAiAAEAAAATAAcAAQAiAAEAAAATAAgAAQAiAAEAAAATAAkAAQAiAAEAAAATAAoAAQAiAAEAAAATAAsAAQAiAAEAAAATAAwAAQAiAAEAAAATAA0AAQAiAAEAAAATAA4AAQAiAAEAAAATAA8AAQAiAAEAAAAUAP//AQAiAAEAAAAUAAAAAQAiAAEAAAAUAAEAAQAiAAEAAAAUAAIAAQAiAAEAAAAUAAMAAQAiAAEAAAAUAAQAAQAiAAEAAAAUAAUAAQAiAAEAAAAUAAYAAQAiAAEAAAAUAAcAAQAiAAEAAAAUAAgAAQAiAAEAAAAUAAkAAQAiAAEAAAAUAAoAAQAiAAEAAAAUAAsAAQAiAAEAAAAUAAwAAQAiAAEAAAAUAA0AAQAiAAEAAAAUAA4AAQAiAAEAAAAUAA8AAQAiAAEAAAAVAP//AQAiAAEAAAAVAAAAAQAiAAEAAAAVAAEAAQAiAAEAAAAVAAIAAQAiAAEAAAAVAAMAAQAiAAEAAAAVAAQAAQAiAAEAAAAVAAUAAQAiAAEAAAAVAAYAAQAiAAEAAAAVAAcAAQAiAAEAAAAVAAgAAQAiAAEAAAAVAAkAAQAiAAEAAAAVAAoAAQAiAAEAAAAVAAsAAQAiAAEAAAAVAAwAAQAiAAEAAAAVAA0AAQAiAAEAAAAVAA4AAQAiAAEAAAAVAA8AAQAiAAEAAAAWAP//AQAiAAEAAAAWAAAAAQAiAAEAAAAWAAEAAQAiAAEAAAAWAAIAAQAiAAEAAAAWAAMAAQAiAAEAAAAWAAQAAQAiAAEAAAAWAAYAAQAiAAEAAAAWAAcAAQAiAAEAAAAWAAgAAQAiAAEAAAAWAAkAAQAiAAEAAAAWAAoAAQAiAAEAAAAWAAsAAQAiAAEAAAAWAAwAAQAiAAEAAAAWAA0AAQAiAAEAAAAWAA4AAQAiAAEAAAAWAA8AAQAiAAEAAAAXAP//AQAiAAEAAAAXAAAAAQAiAAEAAAAXAAEAAQAiAAEAAAAXAAIAAQAiAAEAAAAXAAMAAQAiAAEAAAAXAAQAAQAiAAEAAAAXAAYAAQAiAAEAAAAXAAcAAQAiAAEAAAAXAAgAAQAiAAEAAAAXAAkAAQAiAAEAAAAXAAoAAQAiAAEAAAAXAAsAAQAiAAEAAAAXAAwAAQAiAAEAAAAXAA0AAQAiAAEAAAAXAA4AAQAiAAEAAAAXAA8AAQAiAAEAAAAYAP//AQAiAAEAAAAYAAAAAQAiAAEAAAAYAAEAAQAiAAEAAAAYAAIAAQAiAAEAAAAYAAMAAQAiAAEAAAAYAAQAAQAiAAEAAAAYAAUAAQAiAAEAAAAYAAYAAQAiAAEAAAAYAAcAAQAiAAEAAAAYAAgAAQAiAAEAAAAYAAkAAQAiAAEAAAAYAAoAAQAiAAEAAAAYAAsAAQAiAAEAAAAYAAwAAQAiAAEAAAAYAA0AAQAiAAEAAAAYAA4AAQAiAAEAAAAYAA8AAQAiAAEAAAAZAP//AQAiAAEAAAAZAAAAAQAiAAEAAAAZAAEAAQAiAAEAAAAZAAIAAQAiAAEAAAAZAAMAAQAiAAEAAAAZAAQAAQAiAAEAAAAZAAUAAQAiAAEAAAAZAAYAAQAiAAEAAAAZAAcAAQAiAAEAAAAZAAgAAQAiAAEAAAAZAAkAAQAiAAEAAAAZAAoAAQAiAAEAAAAZAAsAAQAiAAEAAAAZAAwAAQAiAAEAAAAZAA0AAQAiAAEAAAAZAA4AAQAiAAEAAAAZAA8AAQAiAAEAAAAaAP//AQAiAAEAAAAaAAAAAQAiAAEAAAAaAAEAAQAiAAEAAAAaAAIAAQAiAAEAAAAaAAMAAQAiAAEAAAAaAAQAAQAiAAEAAAAaAAUAAQAiAAEAAAAaAAYAAQAiAAEAAAAaAAcAAQAiAAEAAAAaAAgAAQAiAAEAAAAaAAkAAQAiAAEAAAAaAAoAAQAiAAEAAAAaAAsAAQAiAAEAAAAaAAwAAQAiAAEAAAAaAA0AAQAiAAEAAAAaAA4AAQAiAAEAAAAaAA8AAQAiAAEAAAAbAP//AQAiAAEAAAAbAAAAAQAiAAEAAAAbAAEAAQAiAAEAAAAbAAIAAQAiAAEAAAAbAAMAAQAiAAEAAAAbAAQAAQAiAAEAAAAbAAUAAQAiAAEAAAAbAAYAAQAiAAEAAAAbAAcAAQAiAAEAAAAbAAgAAQAiAAEAAAAbAAkAAQAiAAEAAAAbAAoAAQAiAAEAAAAbAAsAAQAiAAEAAAAbAAwAAQAiAAEAAAAbAA0AAQAiAAEAAAAbAA4AAQAiAAEAAAAbAA8AAQAiAAEAAAAWAAUAAgABAA0AAAAXAAUAAgABAA0AAAARAAUAAQAiAAEAAAAQAAUAAQAiAAEAAAA=")
tile_set = ExtResource("2_smy2q")

[node name="InputConveyer" type="Node2D" parent="."]

[node name="UpConveyer" parent="InputConveyer" instance=ExtResource("3_wlpa2")]
position = Vector2(127, 224)
scale = Vector2(2, 2)

[node name="UpConveyer2" parent="InputConveyer" instance=ExtResource("3_wlpa2")]
position = Vector2(127, 288)
scale = Vector2(2, 2)

[node name="UpConveyer3" parent="InputConveyer" instance=ExtResource("3_wlpa2")]
position = Vector2(127, 352)
scale = Vector2(2, 2)

[node name="UpConveyer4" parent="InputConveyer" instance=ExtResource("3_wlpa2")]
position = Vector2(127, 416)
scale = Vector2(2, 2)

[node name="UpConveyer5" parent="InputConveyer" instance=ExtResource("3_wlpa2")]
position = Vector2(127, 480)
scale = Vector2(2, 2)

[node name="OutputConveyer" type="Node2D" parent="."]

[node name="DownConveyer" parent="OutputConveyer" instance=ExtResource("4_rtj1r")]
position = Vector2(737, 224)
scale = Vector2(2, 2)

[node name="DownConveyer2" parent="OutputConveyer" instance=ExtResource("4_rtj1r")]
position = Vector2(737, 288)
scale = Vector2(2, 2)

[node name="DownConveyer3" parent="OutputConveyer" instance=ExtResource("4_rtj1r")]
position = Vector2(737, 352)
scale = Vector2(2, 2)

[node name="DownConveyer4" parent="OutputConveyer" instance=ExtResource("4_rtj1r")]
position = Vector2(737, 416)
scale = Vector2(2, 2)

[node name="DownConveyer5" parent="OutputConveyer" instance=ExtResource("4_rtj1r")]
position = Vector2(737, 480)
scale = Vector2(2, 2)

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(864, 486)
offset_right = 902.0
offset_bottom = 517.0
color = Color(0.518516, 0.589267, 0.733673, 0.588235)

[node name="Title" type="Label" parent="."]
auto_translate_mode = 2
offset_left = 307.0
offset_top = -76.0
offset_right = 556.0
offset_bottom = -27.0
theme_override_fonts/font = ExtResource("5_6h1mp")
theme_override_font_sizes/font_size = 40
text = "Automation"
horizontal_alignment = 1

[node name="DefaultLevelsButton" type="Button" parent="."]
offset_left = 336.0
offset_top = 551.0
offset_right = 519.324
offset_bottom = 600.251
theme = ExtResource("6_cnmoc")
theme_override_fonts/font = ExtResource("5_6h1mp")
theme_override_font_sizes/font_size = 20
text = "Default Levels"

[node name="CustomLevelsButton" type="Button" parent="."]
offset_left = 336.0
offset_top = 624.0
offset_right = 519.324
offset_bottom = 673.251
theme = ExtResource("6_cnmoc")
theme_override_fonts/font = ExtResource("5_6h1mp")
theme_override_font_sizes/font_size = 20
text = "Custom Levels"

[node name="ExitButton" type="Button" parent="."]
offset_left = 782.0
offset_top = 15.0
offset_right = 847.324
offset_bottom = 64.251
theme = ExtResource("6_cnmoc")
theme_override_fonts/font = ExtResource("5_6h1mp")
theme_override_font_sizes/font_size = 20
text = "Exit"

[node name="LanguageButton" type="Button" parent="."]
offset_left = 365.0
offset_top = 697.0
offset_right = 491.324
offset_bottom = 746.251
theme = ExtResource("6_cnmoc")
theme_override_fonts/font = ExtResource("5_6h1mp")
theme_override_font_sizes/font_size = 20
text = "Language"

[node name="WarningWindow" parent="." instance=ExtResource("7_n2oy8")]
offset_left = 301.0
offset_top = 213.0
offset_right = 301.0
offset_bottom = 213.0

[node name="LevelSelectionWindow" parent="." instance=ExtResource("7_4xdqb")]
offset_left = 243.0
offset_top = 146.0
offset_right = 243.0
offset_bottom = 146.0

[node name="LanguageSelectionWindow" parent="." instance=ExtResource("10_2h6m6")]
offset_left = 243.0
offset_top = 146.0
offset_right = 243.0
offset_bottom = 146.0
